# ikshana

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  warmup_1.py  warmup_2.py  warmup_3.py
.github/workflows/: python-app.yml
data/: manipulation.py
docker/: Dockerfile
ikshana/: __init__.py
ikshana/data/: generate_dataset.py  loader.py  manipulation.py  transformation.py  visualization.py
ikshana/explainability/: __init__.py
ikshana/features/: __init__.py
ikshana/models/: __init__.py  resnet.py  test.py  train.py
ikshana/utils/: __init__.py  explain.py  metrics.py  save_models.py
ikshana/visualization/: __init__.py
requirements/: all.txt  base.txt  development.txt
tests/: __init__.py  test_ikshana.py
