[tool.poetry]
name = "ikshana"
version = "0.1.0"
description = "Computer Vision library"
authors = ["kaustubhharapanahalli <kaustubhharapanahalli@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
