[tool.poetry]
name = "ikshana"
version = "0.1.0"
description = "Computer Vision library"
authors = ["kaustubhharapanahalli <kaustubhharapanahalli@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.10.0"
jupyter = "^1.0.0"
notebook = "^6.5.2"
scikit-learn = "^1.2.1"
pydicom = "^2.3.1"
torch = "^1.13.1"
torchvision = "^0.14.1"
opencv-python-headless = "^4.7.0.68"
opencv-python = "^4.7.0.68"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pydocstyle = "^6.3.0"
mypy = "^1.0.0"
pytest = "^7.2.1"
pre-commit = "^3.0.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
